--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Angular</title>
     <center>
         <button onclick="bulbOn()">On</button>
-        <img src="C:\Users\Lenovo\Downloads\off.jpg" id="image" height="150" width="250">
+        <img src="off.jpg" id="image" height="150" width="250">
         <button onclick="bulbOff()">Off</button>
     </center>
 </head>
